# kiss-icp-note

config/: kiss_lv.yaml
cpp/kiss_icp/core/: CMakeLists.txt  Deskew.cpp  Deskew.hpp  Preprocessing.cpp  Preprocessing.hpp  RGB_completed.cpp  RGB_completed.hpp  Registration.cpp  Registration.hpp  Registration_color.cpp  Threshold.cpp  Threshold.hpp  VoxelHashMap.cpp  VoxelHashMap.hpp  VoxelHashMap_color.cpp
cpp/kiss_icp/pipeline/: CMakeLists.txt  KissICP.cpp  KissICP.hpp  KissLV.cpp  KissLV.hpp
ros/: CMakeLists.txt
ros/config/: kiss_lv.yaml
ros/launch/: odometry.launch
ros/ros1/: OdometryServer.cpp  OdometryServer.hpp  Utils.hpp
ros/rviz/: kiss_icp_ros1.rviz
